refactor(racingcar): extract split feature from validatorUtils and carNameValidation moves to Car